--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
     <div class="card">
         <div class="search">
-            <input type="text" placeholder="Enter city name" spellcheck="false">
+<!-- index.html -->
+<input type="text" placeholder="Enter city name" list="city-list" spellcheck="false">
+<datalist id="city-list"></datalist>
+
             <button><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
         <div class="weather">
